# bagged-data

./: .gitignore  CMakeLists.txt  README.md
include/bd/: BaggedDataset.h  IO.h
test/: BaggedDatasetTest.cxx  CMakeLists.txt
test/data/: Small.bags
